@@ -2,6 +2,7 @@
 
 	* lib/Git/Repo/Commits.pm (Git): version 0.0.4, extracts also committer information from the log. 
 	Stores the hashes of the commits in the returned object. 
+	(Git): Moves around author tests and changes documentation for 0.0.5.
 
 Revision history for Git-Repo-Commits
 
